# ngb-agent-orchestrator

./: .dockerignore  .env.example  .envrc  .flake8  .gitignore  .instructions.md  .orc-aliases  .pre-commit-config.yaml  ARCHITECTURE_ANALYSIS.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  date.txt  diagram.mmd  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  setup-env.sh  test
.claude/: settings.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
ace/: README.md  __init__.py  config.py  local_service.py  models.py  protocols.py
config/: developer-rules.json  litellm.yaml  project-repo-mapping.md  project-setup.json
dispatcher/: __init__.py  cli.py  constants.py  exceptions.py  github_client.py  jira_client.py  protocols.py  run.py  work_plan_formatter.py  work_plan_validator.py
docs/: agent-coding-best-practices.md  agent-loop.md  architecture.md  configuration.md  development.md  mcp-server.md  orchestration-flow.mmd  orchestrator-stategraph.drawio  plan-recipe-flow.mmd  project-setup-options.md  recipes.md  server.md  state-store.md  trace-reconstruction.md  tui.md  workflows.md
graph/: builder.py  litellm_callbacks.py  logging_setup.py  retry.py  state.py  utils.py
mcp_server/: server.py
orchestrator/: builder.py  context_items.py  failure.py  litellm_callbacks.py  log_paths.py  logging_setup.py  node_result.py  paths.py  retry.py  runtime_secrets.py  state.py  subprocess_registry.py  utils.py
otel/: __init__.py  context.py  exporters.py  instrumentation.py  litellm_callback.py  litellm_proxy_setup.py
recipes/: execute.yaml  plan.yaml  smoke_test.yaml
schemas/: work_plan_v1.json
scripts/: backfill_pr_comments_json.py  check_no_fstring_log.py  check_no_print.py  check_sql_migrations.py  guardrail_smoke_check.py  react_alert_agent.py
state/: README.md  __init__.py  local.db-shm  local.db-wal  observable_sqlite_saver.py  repository.py  sqlite_repository.py  sqlite_state_store.py  sqlite_workflow_repository.py  state_store.py  workflow_repository.py  workflow_status.py
tests/: __init__.py  conftest.py  test_ace_cli.py  test_ace_cli_items.py  test_ace_cli_mine.py  test_ace_cli_promote.py  test_ace_cli_stats.py  test_ace_config.py  test_ace_local_service.py  test_ace_mine_command.py  test_ace_service.py  test_ace_tui.py  test_await_pr_approval.py  (+54 more)
(+219 files in other folders)
